fix: pricing page design

--- a/_scss/layout/_features.scss
+++ b/_scss/layout/_features.scss
@@ -66,6 +66,7 @@ section.features-section {
       text-transform: uppercase;
       margin-bottom: 20px;
       color: $web-blue;
+      font-weight: 600;
 
       &--xs {
         display: none;
