--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -81,6 +81,7 @@
         "modules/_responsive-embed",
         "modules/_animations",
         "modules/_owl-carousel",
+        "modules/_switch",
         "modules/_font-7-stroke",
         "modules/_flaticon-social-icons",
         "modules/_fontawesome-brands";
