--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -5,13 +5,58 @@
     <!-- Products Pricing Page Title -->
     <h2 class="site-section__title">{{ page.header-title }}</h2>
 
+    <!-- Switch (Mothly/Yearly) -->
+    <div class="plan-switch-container">
+      <input id="planSwitch" type="checkbox" class="checkbox-switch" />
+    </div>
+    <div class="plan-switch-label-container">
+      <label class="plan-switch-label" for="planSwitch">
+        <span class="plan-switch-label__yearly active">Yearly</span>
+        <span class="plan-switch-label__monthly">Monthly</span>
+      </label>
+    </div>
 
     <!-- Products Pricing Cards (Desktop) -->
     <div class="plans row hidden-xs">
-      <div class="col-blank col-blank--text">
-        All plans include access to the <a href="products/diode-network">Diode Network Explorer</a> and use of the <a href="products/diode-cli">Diode CLI</a>
-      </div>
       {% for plan in page.plans %}
+        <div class="col-plan col-plan--card">
+          <div class="plan">
+            <div class="plan__title">
+              {{ plan.title }}
+            </div>
+            <div class="plan__description">
+              {{ plan.description }}
+            </div>
+            <div class="plan__price yearly">
+              ${{ plan.price.yearly }}<span>/YR</span>
+            </div>
+            <div class="plan__price monthly hide">
+              ${{ plan.price.monthly }}<span>/MO</span>
+            </div>
+
+            <div class="plan__features">
+              <ul>
+                {% for item in plan.items %}
+                  <li>
+                    <span class="circle"></span>
+                    {{ item.title }}
+                  </li>
+                 {% endfor %}
+              </ul>
+            </div>
+
+            <div class="plan__action">
+              <a class="button"> Get {{ plan.title }}</a>
+            </div>  
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+
+    <!-- Products Pricing Plans (Mobile) -->
+    <div id="plans_xs" class="plans plans--xs owl-carousel hidden-sm hidden-md hidden-lg">
+      {% for plan in page.plans %}
+        {% assign outer_forloop = forloop %}
         <div class="col-plan">
           <div class="plan">
             <div class="plan__title">
@@ -20,20 +65,47 @@
             <div class="plan__description">
               {{ plan.description }}
             </div>
-            <div class="plan__price">
-              ${{ plan.price }}<span>/MO</span>
+            <div class="plan__price yearly">
+              ${{ plan.price.yearly }}<span>/YR</span>
+            </div>
+            <div class="plan__price monthly hide">
+              ${{ plan.price.monthly }}<span>/MO</span>
+            </div>
+            <div class="plan__features">
+              <ul>
+                {% for item in plan.items %}
+                  <li>
+                    <span class="circle"></span>
+                    {{ item.title }}
+                  </li>
+                 {% endfor %}
+              </ul>
             </div>
 
             <div class="plan__action">
-              <a class="button"> GO! </a>
+              <a class="button"> Get {{ plan.title }}</a>
             </div>
           </div>
         </div>
       {% endfor %}
     </div>
 
+    <div class="plans-description">
+      All plans include access to the <a href="products/diode-network">Diode Network Explorer</a> and use of the <a href="products/diode-cli">Diode CLI</a>
+    </div>
+
     <!-- Products Pricing Table (Desktop) -->
     <div class="pricing-table hidden-xs">
+      <div class="row plans pricing-table__header">
+        <div class="col-blank">
+          FEATURES
+        </div>
+        {% for plan in page.plans %}
+        <div class="col-plan">
+          {{ plan.title }}
+        </div>
+        {% endfor %}
+      </div>
       {% for item in page.items %}
         <div class="row plans">
           <div class="col-blank">
@@ -56,47 +128,7 @@
       {% endfor %}
     </div>
 
-    <!-- Products Pricing Plans (Mobile) -->
-    <div id="plans_xs" class="plans plans--xs owl-carousel hidden-sm hidden-md hidden-lg">
-      {% for plan in page.plans %}
-        {% assign outer_forloop = forloop %}
-        <div class="col-plan">
-          <div class="plan">
-            <div class="plan__title">
-              {{ plan.title }}
-            </div>
-            <div class="plan__description">
-              {{ plan.description }}
-            </div>
-            <div class="plan__price">
-              ${{ plan.price }}<span>/MO</span>
-            </div>
 
-            <div class="plan__action">
-              <a class="button"> GO! </a>
-            </div>
-
-            <div class="plan__features">
-              <ul>
-                {% for item in page.items %}
-                  {% assign title = tem.title %}
-                  {% assign value = item.plans[outer_forloop.index0].xs-value %}
-                  {% if value and value != "None" %}
-                  <li>
-                    {% if value == true %}
-                      {{ item.title }}
-                    {% else %}
-                      {{ value }}
-                    {% endif %}
-                  </li>
-                  {% endif %}
-                 {% endfor %}
-              </ul>
-            </div>
-          </div>
-        </div>
-      {% endfor %}
-    </div>
 
     <!-- Products Pricing Page Description -->
     <h3 class="products-section__description">{{ page.header-description }}</h3>
