using content page video link vs hard-code

--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -64,7 +64,7 @@
  <!-- Products footer section -->
 <section class="site-section section-focus products-footer-section" id="products-footer">
   <div class="container">
-    <iframe class="tutorial" src="https://www.youtube-nocookie.com/embed/Zibg-6CClc4" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="tutorial" src="{{ page.footer-video }}" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
   </div>
 </section>
