--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -25,6 +25,12 @@
       </div>
       
     </div>
+    <div class="products-body-actions hidden-xs">
+      <a href="{{ site.links.download }}" class="button">DOWNLOAD</a>
+    </div>
+    <div class="products-body-actions hidden-sm hidden-md hidden-lg">
+      <a href="{{ site.links.download }}" class="button button--outline">DOWNLOAD</a>
+    </div>
   </div>
 </section>
 <section class="site-section section-focus products-body-section" id="products-body">
