--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -13,7 +13,7 @@
         <div class="products-image">
           <!-- Products Header Image -->
           <!--img src="{{ page.header-image }}"-->
-          <iframe class="tutorial" src="{{ page.footer-video }}" frameborder="0"
+          <iframe src="{{ page.footer-video }}" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
         </div>
       </div>
