--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -7,7 +7,14 @@
 
     <!-- Products Header Page Description -->
     <h3 class="site-section__description">{{ page.header-description }}</h3>
-
+  
+    
+  <div class="container">
+    <iframe class="tutorial" src="{{ page.footer-video }}" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
+  </div>
+    
+    
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <div class="products-image">
@@ -77,3 +84,8 @@
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
   </div>
 </section>
+
+  <div class="container">
+    <iframe class="tutorial" src="{{ page.footer-video }}" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
+  </div>
