--- a/css/style.css
+++ b/css/style.css
@@ -5710,6 +5710,14 @@ section.products-header-section .products-image {
   background-color: #c4c4c4;
 }
 
+section.products-header-section .products-image iframe {
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 section.products-header-section .products-image-description {
   font-size: 29px;
   line-height: 1.5;
@@ -5724,6 +5732,9 @@ section.products-header-section .products-image-description {
   }
   section.products-header-section .products-image {
     margin-bottom: 40px;
+  }
+  section.products-header-section .products-image iframe {
+    height: 300px;
   }
 }
 
