--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -13,8 +13,8 @@
         <div class="products-image">
           <!-- Products Header Image -->
           <!--img src="{{ page.header-image }}"-->
-          <iframe src="{{ page.footer-video }}" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
+          <iframe src="{{ page.header-video }}" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" allowfullscreen></iframe>
         </div>
       </div>
       <div class="col-sm-12 col-md-6 hidden-sm hidden-xs">
