--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -27,10 +27,10 @@
     
     <!-- Products Header Actions -->
     <div class="products-header-actions hidden-xs">
-      <a href="{{ site.links.download }}" class="button">DOWNLOAD</a>
+      <a href="{{ site.links.download }}" class="button">TRY DIODE DRIVE</a>
     </div>
     <div class="products-header-actions hidden-sm hidden-md hidden-lg">
-      <a href="{{ site.links.download }}" class="button button--outline">DOWNLOAD</a>
+      <a href="{{ site.links.download }}" class="button button--outline">TRY DIODE DRIVE</a>
     </div>
     
   </div>
