--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -28,12 +28,14 @@
       </div>
     </div>
     
-    <!-- Products Header Actions -->
-    <div class="products-header-actions hidden-xs">
-      <a href="{{ site.links.download }}" class="button">TRY DIODE DRIVE</a>
-    </div>
-    <div class="products-header-actions hidden-sm hidden-md hidden-lg">
-      <a href="{{ site.links.download }}" class="button button--outline">TRY DIODE DRIVE</a>
+    <!-- Products Header Actions site.links.download -->
+    <div class="row">
+      <div class="products-header-actions hidden-xs">
+        <a href="{{ page.header-action-link }}" class="button">{{ page.header-action-text }}</a>
+      </div>
+      <div class="products-header-actions hidden-sm hidden-md hidden-lg">
+        <a href="{{ page.header-action-link }}" class="button button--outline">{{ page.header-action-text }}</a>
+      </div>
     </div>
     
   </div>
