--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -70,7 +70,7 @@
     <div class="products-body-actions hidden-sm hidden-md hidden-lg">
       <a href="{{ site.links.telegram }}" class="button button--outline">GET A DEMO</a>
       <a href="{{ site.links.download }}" class="button button--outline">DOWNLOAD</a>
-      <a href="{{ site.links.learn_more }}" class="button button--outline">DOCUMENTATION</a>
+      <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
     </div>
   </div>
 </section>
