--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -22,7 +22,7 @@
               Download dDrive for {{ download.name }}
             </span>
             <span class="text-xs">
-              GET A DEMO
+              Download
             </span>
           </a>
           {% endfor %}
@@ -30,7 +30,7 @@
             LEARN MORE
           </a>
           <a class="link text-xs link--white link--arrow" href="products/d-drive">
-            DIODE IS THE FUTURE OF WEB3
+            LEARN MORE
           </a>
           <div class="action-descriptoin">
             Available for 
