--- a/_includes/sections/features.html
+++ b/_includes/sections/features.html
@@ -44,7 +44,7 @@
         </a>
       </div>
       <div class="col-sm-6">
-        <a class="link link--arrow" alt="Learn More" href="products/d-drive">
+        <a class="link link--arrow" alt="Learn More" href="{{ site.links.learn_more }}">
           LEARN MORE
         </a>
       </div>
@@ -56,7 +56,7 @@
         CONTACT US
       </a>
       <a class="button" alt="Get Started" href="{{ site.links.learn_more }}">
-        GET STARTED
+        LEARN MORE
       </a>
     </div>
 
