--- a/_includes/sections/how-it-works.html
+++ b/_includes/sections/how-it-works.html
@@ -17,11 +17,11 @@
         Download
       </a>
       <a href="{{ site.diode-network.link }}" class="button button--outline">START USING THE NETWORK</a>
-      <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
+      <a href="resources/about" class="link link--arrow">ABOUT US</a>
     </div>
     <div class="actions hidden-sm hidden-md hidden-lg">
       <a class="button" href="{{ site.links.download }}">Download</a>
-      <a class="button button--outline" href="{{ site.links.learn_more }}">LEARN MORE</a>
+      <a class="button button--outline" href="resources/about">ABOUT US</a>
     </div>
   </div>
 </section>
