--- a/_includes/sections/how-it-works.html
+++ b/_includes/sections/how-it-works.html
@@ -91,7 +91,7 @@
 
     </div>
     <div class="action hidden-xs">
-      <a href="{{ site.links.try_it_out }}" class="button button--outline">TRY IT OUT</a>
+      <a href="prenet/" class="button button--outline">See the Network Explorer</a>
     </div>
 
   </div>
@@ -123,7 +123,7 @@
       </div>
     {% endfor %}
     <div class="action hidden-xs">
-      <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
+      <a href="https://support.diode.io/category/cck0x29491" class="link link--arrow">Start Using the Network</a>
     </div>
   </div>
 </section>
