--- a/_includes/sections/how-it-works.html
+++ b/_includes/sections/how-it-works.html
@@ -91,7 +91,7 @@
 
     </div>
     <div class="action hidden-xs">
-      <a href="prenet/" class="button button--outline">See the Network Explorer</a>
+      <a href="prenet/" class="button button--outline">Browse the Network Explorer</a>
     </div>
 
   </div>
