--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="plan__action">
-              <a class="button"> Get {{ plan.title }}</a>
+              <a href="{{ plan.action }}" class="button">{{ plan.action-name }}</a>
             </div>  
           </div>
         </div>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="plan__action">
-              <a class="button"> Get {{ plan.title }}</a>
+              <a href="{{ plan.action }}" class="button">{{ plan.action-name }}</a>
             </div>
           </div>
         </div>
