fix: pricing table, hero image, breadcrumbs

--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -113,10 +113,11 @@
           </div>
           {% for plan in item.plans %}
             <div class="col-plan">
-              {% if plan.value != true and plan.value != false %}
-                {{ plan.value }}
+              {% if plan.yearly != true and plan.yearly != false %}
+                <div class="yearly">{{ plan.yearly }}</div>
+                <div class="monthly hide">{{ plan.monthly }}</div>
               {% else %}
-                {% if plan.value  %}
+                {% if plan.yearly  %}
                   Yes
                 {% else %}
                   No
