--- a/_scss/layout/_hero.scss
+++ b/_scss/layout/_hero.scss
@@ -13,11 +13,21 @@ section.site-section.hero-section {
     color: $white;
     background-image: url('../images/cloud.png');
     background-repeat: no-repeat;
-    background-position: right;
-    background-size: 50%;
+    background-position: right -500px center;
+    background-size: 1311px 913px;
 
+    @media (max-width: 1500px) {
+        background-position: right -600px center;
+    }
+    @media (max-width: 1300px) {
+        background-position: right -650px center;
+    }
+    @media (max-width: 1199px) {
+        background-position: right -720px center;
+    }
     @media (max-width: 993px) {
-        background-position: top right;
+        background-position: right -560px center;
+        background-size: 900px;
     }
 
     @media (max-width: 768px) {
@@ -31,27 +41,6 @@ section.site-section.hero-section {
         justify-content: left;
 
         position: relative;
-
-        &::after {
-            content: '';
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background-image: url('../images/ic.png');
-            background-repeat: no-repeat;
-            background-position: 86% 40%;
-            pointer-events: none;
-            @media (max-width: 1200px) {
-                background-position: right 40%;
-            }
-            @media (max-width: 993px) {
-                background-size: 200px;
-                background-position: 90% 40%;
-            }
-            @media (max-width: 768px) {
-                display: none;
-            }
-        }
 
         .hero-title {
             font-size: $title-font-size-2;
