Fixed syntax error

--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -34,7 +34,7 @@
                         <div class="download-description">
                             {{ site.d-drive.description }}
                         </div>
-                        <a class="link link--arrow " href="{{ site.d-drive.learn_more }}">LEARN MORE</a>
+                        <a class="link link--arrow " href="{{ site.d-drive.learn-more }}">LEARN MORE</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                         <div class="download-description">
                             {{ site.diode-cli.description }}
                         </div>
-                        <a class="link link--arrow" href="{{ site.diode-cli.learn_more }}">LEARN MORE</a>
+                        <a class="link link--arrow" href="{{ site.diode-cli.learn-more }}">LEARN MORE</a>
                     </div>
                 </div>
             </div>
