Redirected dDrive download to alpha sign up

--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -17,6 +17,8 @@
                     </div>
                     <p class="hidden-sm hidden-md hidden-lg">{{ site.d-drive.description }}</p>
                     <div class="download-action">
+                        <a class="button" href="https://forms.gle/9yNDgmTdy2KhjKHE8">Join the Alpha Program</a>
+                        <!--
                         {% for download in site.d-drive.downloads %}
                         <a class="button hide {{ download.id }}" href="{{ site.d-drive.download-base }}{{ download.link }}">Download dDrive for {{ download.name }}</a>
                         {% endfor %}
@@ -27,6 +29,7 @@
                             <a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[3].link }}">{{ site.d-drive.downloads[3].name }}</a> 
                             (<a href="{{ site.d-drive.download-base }}{{ site.d-drive.downloads[0].link }}">{{ site.d-drive.downloads[0].name }}</a>)
                         </div>
+                        -->
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-8 hidden-xs">
