Removing feature table

--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -96,6 +96,7 @@
 
     <!-- Products Pricing Table (Desktop) -->
     <div class="pricing-table hidden-xs">
+<!-- Reintroduce feature table when pricing becomes more complex
       <div class="row plans pricing-table__header">
         <div class="col-blank">
           FEATURES
@@ -127,6 +128,7 @@
           {% endfor %}
         </div>
       {% endfor %}
+-->
       <div class="pricing-table__description">
         * All plans have unlimited shares for full drive sharing. Only Business and Enterprise support users that can be assigned special permissions.
       </div>
